--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ plotly = "^4.14.3"
 APScheduler = "^3.7.0"
 arrow = "^1.1.0"
 scikit-learn = "^0.24.2"
+pandas-profiling = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 
