--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ APScheduler = "^3.7.0"
 arrow = "^1.1.0"
 scikit-learn = "^0.24.2"
 pandas-profiling = "^3.0.0"
+dask = "^2021.7.0"
+cacheout = "^0.13.1"
 
 [tool.poetry.dev-dependencies]
 
