--- a/.github/workflows/push_image.yml
+++ b/.github/workflows/push_image.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.CA_PAT }}
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
