--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ prophet = "^1.0.1"
 plotly = "^4.14.3"
 APScheduler = "^3.7.0"
 arrow = "^1.1.0"
+SQLAlchemy = "^1.4.21"
+pymongo = "^3.12.0"
+mysqlclient = "^2.0.3"
+
 
 [tool.poetry.dev-dependencies]
 
