--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ arrow = "^1.1.0"
 SQLAlchemy = "^1.4.21"
 pymongo = "^3.12.0"
 mysqlclient = "^2.0.3"
+pandas-profiling = "^3.0.0"
 
 
 [tool.poetry.dev-dependencies]
