--- a/.github/workflows/push_image.yml
+++ b/.github/workflows/push_image.yml
@@ -25,4 +25,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/indexical-metrics-measure-advisory/watchmen-matryoshka-dqc:latest
+          tags: ghcr.io/indexical-metrics-measure-advisory/watchmen-matryoshka-dqc:${{ github.event.release.tag_name }}
