--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ SQLAlchemy = "^1.4.21"
 pymongo = "^3.12.0"
 mysqlclient = "^2.0.3"
 pandas-profiling = "^3.0.0"
-dask = "^2021.11.2"
+#dask = "^2021.11.2"
 
 
 [tool.poetry.dev-dependencies]
